--- a/style-restaurant.css
+++ b/style-restaurant.css
@@ -12,6 +12,13 @@ body{
   overflow:hidden;
 }
 
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
 ul{
   margin:0;
   padding:0;
@@ -20,10 +27,12 @@ ul{
 
 /* Header **/
 header{
-  background:#F70805;
+  background:#E5504C;
   color:#ffffff;
-  padding-top:30px;
+  padding-top:20px;
+  padding-bottom:20px;
   min-height:70px;
+  max-height:140px;
   border-bottom:#e8491d 3px solid;
 }
 
@@ -91,8 +100,12 @@ footer{
   padding:20px;
   margin-top:0px;
   color:#ffffff;
-  background-color:#e8491d;
+  background-color:#E5504C;
   text-align: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
 }
 
   header{
