--- a/style-restaurant.css
+++ b/style-restaurant.css
@@ -5,6 +5,16 @@ body{
   background-color:#f4f4f4;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-weight: 700;
+}
+
 /* Global */
 .container{
   width:80%;
